# firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/ble/: CMakeLists.txt  ble.c  ble.h  ble_utils.h
components/ble/ble-main/: CMakeLists.txt
components/ble/main/: ble.c
components/debug-console/: CMakeLists.txt  console.cpp  console.h
components/display/: CMakeLists.txt  display.cpp  display.h  u8g2_esp32_hal.c  u8g2_esp32_hal.h
components/display/U8g2/src/: U8g2lib.cpp  U8x8lib.cpp
components/speech-recognition/: CMakeLists.txt  audio_provider.cc  fft.cpp  fft.h  main_functions.cc  main_functions.h  model.h  recognize_commands.cc  recognize_commands.h  speech-recognition.cpp  speech-recognition.h  speech_recognition.cc  speech_recognition.h  tf-speech.cpp  tf-speech.h
components/vibration-motor/: CMakeLists.txt  viberation-motor.cpp  vibration-motor.cpp  vibration-motor.h
components/wb-console/: wb-console.h
main/: CMakeLists.txt  hello_world_main.c  main.cpp  pindefs.h  time_utils.cpp  time_utils.h
scripts/: audio.py
ulp/: mic.S
